now fetching the github projects without limitation

--- a/index.html
+++ b/index.html
@@ -44,19 +44,31 @@ iiiiiiii       CCCCCCCCCCCCC   ooooooooooo      ddddddddd   ddddd    eeeeeeeeeee
     <meta name="keywords" content="Games, Android, Android Games">
     <meta name="author" content="iCodeHigh">
 
+    <link rel="shortcut icon" href="img/favicon64.png">
+    <link rel="apple-touch-icon" href="img/favicon64.png">
+
     <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
 
 <header>
     <div class="container">
-        <h1>iCodeHigh</h1>
+        <h1 class="logo"><img src="img/logo.png" alt="iCodeHigh Standards"/></h1>
         <h2>We make games</h2>
     </div>
 </header>
-<main></main>
-<footer></footer>
+<main>
+    <div class="container">
+        <ul class="projects">Loading...</ul>
+    </div>
+</main>
+<footer>
+    <div class="container">
+        <p>&copy; <span class="year"></span> iCodeHigh Standards</p>
+    </div>
+</footer>
 
+<script src="js/jquery.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
