added styles to the project boxes

--- a/index.html
+++ b/index.html
@@ -1,30 +1,4 @@
 <!DOCTYPE html>
-<!--
-                                                         dddddddd
-  iiii         CCCCCCCCCCCCC                             d::::::d                  HHHHHHHHH     HHHHHHHHH  iiii                     hhhhhhh
- i::::i     CCC::::::::::::C                             d::::::d                  H:::::::H     H:::::::H i::::i                    h:::::h
-  iiii    CC:::::::::::::::C                             d::::::d                  H:::::::H     H:::::::H  iiii                     h:::::h
-         C:::::CCCCCCCC::::C                             d:::::d                   HH::::::H     H::::::HH                           h:::::h
-iiiiiii C:::::C       CCCCCC   ooooooooooo       ddddddddd:::::d     eeeeeeeeeeee    H:::::H     H:::::H  iiiiiii    ggggggggg   gggggh::::h hhhhh
-i:::::iC:::::C               oo:::::::::::oo   dd::::::::::::::d   ee::::::::::::ee  H:::::H     H:::::H  i:::::i   g:::::::::ggg::::gh::::hh:::::hhh
- i::::iC:::::C              o:::::::::::::::o d::::::::::::::::d  e::::::eeeee:::::eeH::::::HHHHH::::::H   i::::i  g:::::::::::::::::gh::::::::::::::hh
- i::::iC:::::C              o:::::ooooo:::::od:::::::ddddd:::::d e::::::e     e:::::eH:::::::::::::::::H   i::::i g::::::ggggg::::::ggh:::::::hhh::::::h
- i::::iC:::::C              o::::o     o::::od::::::d    d:::::d e:::::::eeeee::::::eH:::::::::::::::::H   i::::i g:::::g     g:::::g h::::::h   h::::::h
- i::::iC:::::C              o::::o     o::::od:::::d     d:::::d e:::::::::::::::::e H::::::HHHHH::::::H   i::::i g:::::g     g:::::g h:::::h     h:::::h
- i::::iC:::::C              o::::o     o::::od:::::d     d:::::d e::::::eeeeeeeeeee  H:::::H     H:::::H   i::::i g:::::g     g:::::g h:::::h     h:::::h
- i::::i C:::::C       CCCCCCo::::o     o::::od:::::d     d:::::d e:::::::e           H:::::H     H:::::H   i::::i g::::::g    g:::::g h:::::h     h:::::h
-i::::::i C:::::CCCCCCCC::::Co:::::ooooo:::::od::::::ddddd::::::dde::::::::e        HH::::::H     H::::::HHi::::::ig:::::::ggggg:::::g h:::::h     h:::::h
-i::::::i  CC:::::::::::::::Co:::::::::::::::o d:::::::::::::::::d e::::::::eeeeeeeeH:::::::H     H:::::::Hi::::::i g::::::::::::::::g h:::::h     h:::::h
-i::::::i    CCC::::::::::::C oo:::::::::::oo   d:::::::::ddd::::d  ee:::::::::::::eH:::::::H     H:::::::Hi::::::i  gg::::::::::::::g h:::::h     h:::::h
-iiiiiiii       CCCCCCCCCCCCC   ooooooooooo      ddddddddd   ddddd    eeeeeeeeeeeeeeHHHHHHHHH     HHHHHHHHHiiiiiiii    gggggggg::::::g hhhhhhh     hhhhhhh
-                                                                                                                              g:::::g
-                                                                                                                  gggggg      g:::::g
-                                                                                                                  g:::::gg   gg:::::g
-                                                                                                                   g::::::ggg:::::::g
-                                                                                                                    gg:::::::::::::g
-                                                                                                                      ggg::::::ggg
-                                                                                                                         gggggg
- -->
 <!--[if lt IE 9]>
 <html id="kill-yourself" lang="en">
 <![endif]-->
@@ -59,7 +33,9 @@ iiiiiiii       CCCCCCCCCCCCC   ooooooooooo      ddddddddd   ddddd    eeeeeeeeeee
 </header>
 <main>
     <div class="container">
-        <ul class="projects">Loading...</ul>
+        <p class="loading">Loading our games...</p>
+        <h2 class="title hidden">Our games</h2>
+        <ul class="projects hidden"></ul>
     </div>
 </main>
 <footer>
